--- a/SemesterApp/SemesterApp/Views/intro.xaml
+++ b/SemesterApp/SemesterApp/Views/intro.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SemesterApp.Vejledning"
-             BackgroundColor="#F6F4F7"
+             BackgroundColor="Red"
              Title="Vejledning"
              Icon="guide.png"
              >
